<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_layout_spaces">

    <TextView
        android:id="@+id/title_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_title"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/title_size" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameTv"
        android:layout_below="@id/title_relative"/>

    <EditText
        android:layout_width="@dimen/et_width"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true" />

    <LinearLayout
        android:id="@+id/btn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="@dimen/default_layout_spaces">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFirst"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btnSecond"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/default_layout_spaces"
            android:layout_marginRight="@dimen/default_layout_spaces"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnThird"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoTv"
        android:layout_below="@id/btn_group"
        android:layout_marginTop="@dimen/default_layout_spaces"/>

    <EditText
        android:id="@+id/et_multi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_info" />

    <Button
        android:id="@+id/btn_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previus"
        android:layout_below="@id/et_multi" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@id/et_multi"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>